gdkpixbufsink: don't leak old pixel buffer when setting a new overlay

https://bugzilla.gnome.org/show_bug.cgi?id=755773